[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-lint"
version = "0.1.0"
description = "Robot dataset quality auditor for LeRobot training pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Christian Nyamekye", email = "autonomousnyamekye@gmail.com"},
]
keywords = ["robotics", "lerobot", "dataset", "quality", "imitation-learning", "data-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "pyarrow>=8.0",
]

[project.optional-dependencies]
hf = ["huggingface-hub>=0.14"]
all = ["huggingface-hub>=0.14", "gradio>=4.0"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
robo-lint = "robo_lint.cli:main"

[tool.setuptools.packages.find]
include = ["robo_lint*"]

[project.urls]
Homepage = "https://github.com/ChristianNyamekye/robo-lint"
Documentation = "https://github.com/ChristianNyamekye/robo-lint#readme"
Issues = "https://github.com/ChristianNyamekye/robo-lint/issues"
